done, first v to deploy

--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -1,7 +1,129 @@
+
+
+#homeContainer input[type=text]{
+    background-color: var(--main-bg-color);
+    border: 0px;
+    color: white;
+    /* background-image: url('../img/searchicon.png') !important; */
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+  }
+
+ #homeContainer input[type=text]:focus{
+      background:var(--third-bg-color);
+      color:var(--main-bg-color);
+      font-weight: bold;
+      outline: none !important;
+      /* background-image: url('../img/searchicon.png') !important; */
+    background-position: 10px 10px 10px 5px;
+    background-repeat: no-repeat;
+  }
+  
+  #searchBar{
+    display: inline-block;
+    position: relative;
+  }
+
+  #searchBar input[type=button]{
+    background-color: var(--main-bg-color) !important;
+    background-image: url('../img/searchicon.png') !important;
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 38px;
+    padding: 10px 20px 0px 10px;
+    margin-left: -25px;
+    margin-right: 20px;
+    margin-bottom: -21px;
+    border: none;
+    cursor: pointer;
+  }
+
+
+  input::placeholder{
+    color: black;
+  }
+
+  input:focus::placeholder{
+    color: transparent;
+  }
+
+
+  select.form-control{
+    background-color: var(--main-bg-color) !important;
+  }
+
+  select.form-control:focus{
+    background-color: var(--third-bg-color) !important;
+  }
+  
+
+ #homeContainer{
+   color:white;
+ }
+
+ #homeContainer button{
+   padding: 5px 8px;
+   margin: 20px 5px 20px 5px;
+   border: none;
+   border-radius: 4px;
+   font-size: 16px;
+   cursor: pointer;
+   transition: all .2s linear;
+ }
+
+ #homeContainer button:hover{
+   background-color: var(--main-bg-color);
+   font-weight: bold;
+   color:white;
+ }
+
 #games-container{
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 10px;
-    background-color: #2196F3;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-gap: 6px;
     padding: 10px;
+    color: black;
+
+
+}
+
+.div_no_results{
+   /*background-color: brown !important;*/
+   position: relative;
+   width:900px;
+   padding: 50px 50px;
+   background-color: transparent  !important;
+   color: var(--main-bg-color);
+   font-weight: bold;
+   font-size: x-large;
+   border-color: transparent !important;
+   left: 530px;
+}
+
+#btnSearch{
+  background-color: var(--main-bg-color);
+  border-radius: 10px;
+  border: 0px;
+  color: white;
+  font-weight: bold;
+  margin: 20px 10px 20px 10px;
+  padding: 10px 40px 10px 40px;
+  cursor: pointer;
+  box-shadow: 0 9px #999;
+}
+
+#btnSearch:hover{
+  background-color: var(--second-bg-color);
+}
+
+#btnSearch:active {
+  background-color: var(--second-bg-color);
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.actualPagination{
+    background-color: var(--main-bg-color);
+    font-weight: bold;
 }
