--- a/client/src/components/Loading.css
+++ b/client/src/components/Loading.css
@@ -1,3 +1,29 @@
+@media only screen and (max-width: 600px) {
+  /* For mobile phones: */
+  .loader {
+    left:30%;
+    top:40%;
+  }
+  
+}
+
+@media only screen and (max-width: 768px) {
+  /* Tablets: */
+  .loader {
+    left:37%;
+    top:40%;
+  }  
+}
+
+@media only screen and (min-width: 768px) {
+  /* Desktop: */
+  .loader {
+    left:45%;
+    top:40%;
+  }
+  
+}
+
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
@@ -7,8 +33,6 @@
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
     position: absolute;
-    left:580px;
-    top:250px;
   }
   
   /* Safari */
