--- a/client/src/components/Games.css
+++ b/client/src/components/Games.css
@@ -1,3 +1,27 @@
+@media only screen and (max-width: 600px) {
+    /* For mobile phones: */
+    #gameContainer{ 
+        width: 94%;
+    }
+
+  }
+
+  @media only screen and (min-width: 600px) { 
+      /*Tablets*/
+      #gameContainer{ 
+        width: 96%;
+    }
+
+  }
+ 
+  
+@media only screen and (min-width: 768px) {
+    /* For Desktop: */
+    #gameContainer{ 
+        width: 92%;
+    }
+  }  
+
 #games-container > div{
     background-color: var(--main-bg-color);
     border: 1px solid black;
@@ -20,7 +44,7 @@
     background-repeat:no-repeat;
     position: relative;
     left:0px;
-    width: 92%;
+   
     height: 300px;
     overflow:hidden;
     border-radius: 20%;
@@ -39,7 +63,7 @@
 
 #caption h3{
     margin-top: 5px;
-    font-size: 18px;
+    font-size:2.8vh;/* 18px;*/
     
 }
 
