--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -10,7 +10,7 @@
 }
 }
 
-@media only screen and (min-width: 600px) { 
+@media only screen and (max-width: 768px) { 
   /*Tablets*/
   #games-container{
     grid-template-columns: 100%;
