--- a/client/src/components/GameDetails.css
+++ b/client/src/components/GameDetails.css
@@ -30,8 +30,8 @@
         left: 705px;/*705px*/
     }
     #textBox{
-        width: 600px;
-        padding: 0px 40px;
+        width: 69vh;
+        padding: 0px 10px;
     }
   }  
 
@@ -46,7 +46,7 @@
     position: relative;
     left:0px;
     width: 100%;
-    height: 575px;
+    height: 100vh;
     overflow:hidden;
 }
 
