--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -1,8 +1,7 @@
 @media only screen and (max-width: 600px) { 
   /*mobil*/
   #h1Landing{
-  width: 100%;
-  height: 466px;  
+  width: 100%; 
   padding: 80px 35px 80px 0px;
   text-align: center;     
   }
@@ -29,8 +28,7 @@
 @media only screen and (min-width: 768px) {
   /*desktop*/
   #h1Landing{
-  width: 325px;
-  height: 466px;  
+  width: 325px;  
   padding: 80px 35px;
   text-align: left;     
   }
@@ -43,7 +41,7 @@
     background-image: url('../img/landing.jpg');
     margin-top: -37px;
     width: 100%;
-    height: 626px;
+    height: 100vh;
     font-family: var(--main-font-family);
     background-position: center;
     background-repeat: no-repeat;
@@ -99,6 +97,7 @@
     background: black;
     opacity: 0.5;
     color: white;
+    height: 100vh;
     font-size: 54px;
     font-weight: bold;
 }
