--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -7,19 +7,21 @@
   }
 
   #btnLanding{
+    top: 50%;   
     left: 25% !important;
   }
      
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width:600px) and (max-width: 768px) {
   /*tablets*/
   #h1Landing{
-    padding: 80px 35px 80px 0px;
+    padding: 60px 35px 80px 40px;
     text-align: center;     
     }
   #btnLanding{
-    left: 32%;
+    left: 38%;
+    top: 60%;   
   }
      
 
@@ -34,6 +36,7 @@
   }
   #btnLanding{
     left: 7%;
+    top: 50%;   
   }
 }
 
@@ -52,7 +55,6 @@
 #btnLanding{
     position: absolute;
     background:var(--main-bg-color);
-    top: 50%;   
     width: 200px;
     height: 80px;
     padding: 20px 20px;
