--- a/client/src/components/GameDetails.css
+++ b/client/src/components/GameDetails.css
@@ -1,37 +1,78 @@
-@media only screen and (max-width: 600px) {
-    /* For mobile phones: */
+@media only screen and (max-width: 412px) { 
+    #detailsContainer{
+        background-position: -400px;
+    }
     #detailsText{
+        width: 96%; 
         left: 0%;/*705px*/
         opacity: 0.8;
     }
     #textBox{
-        width: 40%;
+        /* width: 40%; */
+        padding: 0px 40px;
+    }
+}
+@media only screen and (min-width: 413px) and (max-width:600px) {
+    /* For mobile phones: */
+    #detailsContainer{
+        background-position: 0px;
+    }
+    #detailsText{
+        width: 96%; 
+        left: 0%;/*705px*/
+        opacity: 0.8;
+    }
+    #textBox{
+        /* width: 40%; */
         padding: 0px 40px;
     }
   }
 
-  @media only screen and (max-width: 768px) { 
-      /*Tablets*/
+  @media only screen and (min-width: 600px) and (max-width: 768px) { 
+      /*Mobile horizontal*/
+      #detailsContainer{
+        background-position: 0px;
+    }
       #detailsText{
+        width: 96%;  
         left: 0%;/*705px*/
         opacity: 0.8;
     }
     #textBox{
-        width: 72%;
-        padding: 0px 40px;
+        /* width: 72%; */
+        padding: 0px 0px 0px 40px;
     }
 
   }
  
-  
-@media only screen and (min-width: 768px) {
-    /* For Desktop: */
-    #detailsText{
-        left: 705px;/*705px*/
+  @media only screen and (min-width:768px) and (max-width: 1024px)  { 
+      /*Tablets*/
+      #detailsContainer{
+        background-position: -400px;
+    }
+      #detailsText{
+        width: 96%;  
+        left: 0%;/*705px*/
+        opacity: 0.8;
     }
     #textBox{
-        width: 90vh;
-        padding: 0px 10px;
+        /* width: 72%; */
+        padding: 0px 0px 0px 40px;
+    }
+  }
+  
+@media only screen and (min-width: 1024px) {
+    /* For Desktop: */
+    #detailsContainer{
+        background-position: 0px;
+    }
+    #detailsText{
+        /* left: 705px; */
+    }
+    #textBox{
+        width: 100%;
+    padding: 0px;
+    margin-left: 20px;
     }
   }  
 
@@ -40,7 +81,6 @@
 }
 
 #detailsContainer{
-    background-position: -300px;
     background-size: cover;
     background-repeat:no-repeat;
     position: relative;
@@ -53,7 +93,6 @@
 #detailsText{
     position: absolute;
     background-color: var(--fourth-bg-color);
-    width: 720px;
     height: 100%;
     border-left: 10px solid var(--main-bg-color);    
     text-align:center;
