--- a/client/src/components/Games.css
+++ b/client/src/components/Games.css
@@ -3,15 +3,17 @@
     #gameContainer{ 
         width: 94%;
     }
+    #caption h3{
+        width: 38vh;
+    }
 
   }
 
-  @media only screen and (min-width: 600px) { 
+  @media only screen and (min-width: 600px) and (max-width: 768px) { 
       /*Tablets*/
       #gameContainer{ 
         width: 96%;
     }
-
   }
  
   
@@ -54,6 +56,7 @@
 #caption{
     width:100%;
     height: 20%;
+    padding: 5px 5px;
     position: relative;
     bottom: -240px;
     overflow: hidden;
@@ -62,8 +65,8 @@
 }
 
 #caption h3{
-    margin-top: 5px;
-    font-size:2.8vh;/* 18px;*/
+    margin-top: 0px;
+    font-size:1.2em;/* 18px;*/
     
 }
 
@@ -73,7 +76,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    top: -60px;
+    top: -80px;
     overflow:hidden;
     /* display: none; */
     transition: all .3s linear;
