--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,4 +1,10 @@
-/* Add a black background color to the top navigation */
+@media only screen and (max-width: 600px) {
+  /* For mobile phones: */
+  .topnav-right {
+    width: 45vh;
+    text-align: center;
+  }
+}
 .topnav {
     background-color: var(--main-bg-color);
     overflow: hidden;
