--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,10 +1,18 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 412px) {
   /* For mobile phones: */
+  .topnav-right {
+    /* width: 45vh; */
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 413px) and (max-width: 600px) { 
   .topnav-right {
     width: 45vh;
     text-align: center;
   }
 }
+
 .topnav {
     background-color: var(--main-bg-color);
     overflow: hidden;
