--- a/client/src/components/GameDetails.css
+++ b/client/src/components/GameDetails.css
@@ -3,13 +3,14 @@
         background-position: -400px;
     }
     #detailsText{
-        width: 96%; 
-        left: 0%;/*705px*/
+        width: 94%;
+        padding-left: 10px;
         opacity: 0.8;
     }
     #textBox{
-        /* width: 40%; */
-        padding: 0px 40px;
+    width: 92%;
+    padding-left: 8px;
+    height: 100vh;
     }
 }
 @media only screen and (min-width: 413px) and (max-width:600px) {
@@ -23,8 +24,9 @@
         opacity: 0.8;
     }
     #textBox{
-        /* width: 40%; */
-        padding: 0px 40px;
+        /* width: 68%; */
+    padding: 0px 20px;
+        height: 100vh;
     }
   }
 
@@ -34,13 +36,13 @@
         background-position: 0px;
     }
       #detailsText{
-        width: 96%;  
+        width: 98%;  
         left: 0%;/*705px*/
         opacity: 0.8;
     }
     #textBox{
-        /* width: 72%; */
-        padding: 0px 0px 0px 40px;
+        width: 94%;
+        padding: 0px 0px 0px 20px;
     }
 
   }
@@ -56,8 +58,9 @@
         opacity: 0.8;
     }
     #textBox{
-        /* width: 72%; */
+        width: 94%;
         padding: 0px 0px 0px 40px;
+        height: 100vh;
     }
   }
   
@@ -70,9 +73,10 @@
         /* left: 705px; */
     }
     #textBox{
-        width: 100%;
+        width: 94%;
     padding: 0px;
     margin-left: 20px;
+    height: 100vh;
     }
   }  
 
@@ -87,13 +91,13 @@
     left:0px;
     width: 100%;
     height: 100vh;
-    overflow:hidden;
+    /* overflow:auto; */
 }
 
 #detailsText{
     position: absolute;
     background-color: var(--fourth-bg-color);
-    height: 100%;
+    height: auto;
     border-left: 10px solid var(--main-bg-color);    
     text-align:center;
     padding-right: 250px;
