--- a/client/src/components/Games.css
+++ b/client/src/components/Games.css
@@ -1,4 +1,9 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 412px) {
+    #gameContainer{
+        border: 7px solid var(--main-bg-color) !important;
+    }
+}
+@media only screen and (min-width: 412px) and (max-width: 600px) {
     /* For mobile phones: */
     #gameContainer{ 
         width: 94%;
