--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -41,15 +41,16 @@
 }
 
 #container{
-    background-image: url('../img/landing.jpg');
+    background: url('../img/landing.jpg') no-repeat center center fixed;
     margin-top: -37px;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     font-family: var(--main-font-family);
-    background-position: center;
-    background-repeat: no-repeat;
+    /* background-position: center;
+    background-repeat: no-repeat; */
     background-size: cover;
     text-align: center;
+    /* overflow: hidden; */
 }
 
 #btnLanding{
