--- a/client/src/components/GameDetails.css
+++ b/client/src/components/GameDetails.css
@@ -1,82 +1,37 @@
-@media only screen and (max-width: 412px) { 
-    #detailsContainer{
-        background-position: -400px;
-    }
-    #detailsText{
-        width: 94%;
-        padding-left: 10px;
-        opacity: 0.8;
-    }
-    #textBox{
-    width: 92%;
-    padding-left: 8px;
-    height: 100vh;
-    }
-}
-@media only screen and (min-width: 413px) and (max-width:600px) {
+@media only screen and (max-width: 600px) {
     /* For mobile phones: */
-    #detailsContainer{
-        background-position: 0px;
-    }
     #detailsText{
-        width: 96%; 
         left: 0%;/*705px*/
         opacity: 0.8;
     }
     #textBox{
-        /* width: 68%; */
-    padding: 0px 20px;
-        height: 100vh;
+        width: 40%;
+        padding: 0px 40px;
     }
   }
 
-  @media only screen and (min-width: 600px) and (max-width: 768px) { 
-      /*Mobile horizontal*/
-      #detailsContainer{
-        background-position: 0px;
-    }
+  @media only screen and (max-width: 768px) { 
+      /*Tablets*/
       #detailsText{
-        width: 98%;  
         left: 0%;/*705px*/
         opacity: 0.8;
     }
     #textBox{
-        width: 94%;
-        padding: 0px 0px 0px 20px;
+        width: 72%;
+        padding: 0px 40px;
     }
 
   }
  
-  @media only screen and (min-width:768px) and (max-width: 1024px)  { 
-      /*Tablets*/
-      #detailsContainer{
-        background-position: -400px;
-    }
-      #detailsText{
-        width: 96%;  
-        left: 0%;/*705px*/
-        opacity: 0.8;
-    }
-    #textBox{
-        width: 94%;
-        padding: 0px 0px 0px 40px;
-        height: 100vh;
-    }
-  }
   
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 768px) {
     /* For Desktop: */
-    #detailsContainer{
-        background-position: 0px;
-    }
     #detailsText{
-        /* left: 705px; */
+        left: 705px;/*705px*/
     }
     #textBox{
-        width: 94%;
-    padding: 0px;
-    margin-left: 20px;
-    height: 100vh;
+        width: 69vh;
+        padding: 0px 10px;
     }
   }  
 
@@ -85,19 +40,21 @@
 }
 
 #detailsContainer{
+    background-position: -300px;
     background-size: cover;
     background-repeat:no-repeat;
     position: relative;
     left:0px;
     width: 100%;
     height: 100vh;
-    /* overflow:auto; */
+    overflow:hidden;
 }
 
 #detailsText{
     position: absolute;
     background-color: var(--fourth-bg-color);
-    height: auto;
+    width: 720px;
+    height: 100%;
     border-left: 10px solid var(--main-bg-color);    
     text-align:center;
     padding-right: 250px;
