--- a/client/src/components/Games.css
+++ b/client/src/components/Games.css
@@ -1,24 +1,17 @@
-@media only screen and (max-width: 412px) {
-    #gameContainer{
-        border: 7px solid var(--main-bg-color) !important;
-    }
-}
-@media only screen and (min-width: 412px) and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     /* For mobile phones: */
     #gameContainer{ 
         width: 94%;
     }
-    #caption h3{
-        width: 38vh;
-    }
 
   }
 
-  @media only screen and (min-width: 600px) and (max-width: 768px) { 
+  @media only screen and (min-width: 600px) { 
       /*Tablets*/
       #gameContainer{ 
         width: 96%;
     }
+
   }
  
   
@@ -61,7 +54,6 @@
 #caption{
     width:100%;
     height: 20%;
-    padding: 5px 5px;
     position: relative;
     bottom: -240px;
     overflow: hidden;
@@ -70,8 +62,8 @@
 }
 
 #caption h3{
-    margin-top: 0px;
-    font-size:1.2em;/* 18px;*/
+    margin-top: 5px;
+    font-size:2.8vh;/* 18px;*/
     
 }
 
@@ -81,7 +73,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    top: -80px;
+    top: -60px;
     overflow:hidden;
     /* display: none; */
     transition: all .3s linear;
