--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -7,21 +7,19 @@
   }
 
   #btnLanding{
-    top: 50%;   
     left: 25% !important;
   }
      
 }
 
-@media only screen and (min-width:600px) and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   /*tablets*/
   #h1Landing{
-    padding: 60px 35px 80px 40px;
+    padding: 80px 35px 80px 0px;
     text-align: center;     
     }
   #btnLanding{
-    left: 38%;
-    top: 60%;   
+    left: 32%;
   }
      
 
@@ -36,26 +34,25 @@
   }
   #btnLanding{
     left: 7%;
-    top: 50%;   
   }
 }
 
 #container{
-    background: url('../img/landing.jpg') no-repeat center center fixed;
+    background-image: url('../img/landing.jpg');
     margin-top: -37px;
     width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
     font-family: var(--main-font-family);
-    /* background-position: center;
-    background-repeat: no-repeat; */
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
-    /* overflow: hidden; */
 }
 
 #btnLanding{
     position: absolute;
     background:var(--main-bg-color);
+    top: 50%;   
     width: 200px;
     height: 80px;
     padding: 20px 20px;
