--- a/client/src/components/Games.css
+++ b/client/src/components/Games.css
@@ -23,19 +23,16 @@
   }  
 
 #games-container > div{
-    background-color: var(--main-bg-color);
-    border: 1px solid black;
+     /* background-color: var(--main-bg-color); */
+    /*border: 1px solid black; */
     width: 90%;
-    border-radius: 20%;
+    border-radius: 4%;
     opacity: 0.9;
     overflow: hidden;
-    /* 
-    
-    
-    
-    -webkit-transition: opacity .3s linear;
-    transition: opacity .3s linear; */
-    /* z-index: 1; */
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+margin-bottom: 10px;
 }
 
 #gameContainer{
@@ -44,18 +41,18 @@
     background-repeat:no-repeat;
     position: relative;
     left:0px;
-   
-    height: 300px;
+    width: 100%;   
+    height: 280px;
     overflow:hidden;
-    border-radius: 20%;
-    border: 10px solid var(--main-bg-color);
+    border-radius: 4%;
+    border: 0px solid var(--main-bg-color);
 }
 
 #caption{
     width:100%;
-    height: 20%;
+    height: 25%;
     position: relative;
-    bottom: -240px;
+    bottom: -210px;
     overflow: hidden;
     background-color: var(--main-bg-color);
     z-index: 9999;
@@ -73,7 +70,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    top: -60px;
+    top: -85px;
     overflow:hidden;
     /* display: none; */
     transition: all .3s linear;
