--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -25,7 +25,8 @@
 @media only screen and (min-width: 768px) {
   /*desktop*/
   #games-container{
-    grid-template-columns: 20% 20% 20% 20% 20%;   
+    grid-template-columns: 25% 25% 25% 25%;  
+    grid-gap: 5px !important; 
 }
 #searchBar input[type=button]{ 
   margin-bottom: -21px;
@@ -112,12 +113,10 @@
 
 #games-container{
     display: grid;
-    /* grid-template-columns: 20% 20% 20% 20% 20%; */
-    grid-gap: 6px;
-    padding: 10px;
+    padding-left: 30px;
     color: black;
-
-
+    position: relative;
+    left: -12px;
 }
 
 .div_no_results{
@@ -158,4 +157,21 @@
 .actualPagination{
     background-color: var(--main-bg-color);
     font-weight: bold;
+}
+
+.btnAddGame{
+  color:var(--main-bg-color);
+  font-weight:bold;
+  font-size:18px;
+  position:relative;
+  top:10px;
+  background-color: var(--third-bg-color);
+  border-radius: 10px;
+  padding:9px 10px;
+}
+
+.btnAddGame:hover{
+  background-color: var(--main-bg-color);
+  cursor: pointer;
+  color:var(--third-bg-color);
 }
