--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -41,12 +41,13 @@
     background-image: url('../img/landing.jpg');
     margin-top: -37px;
     width: 100%;
-    height: 100vh;
+    height: 105.8vh;
     font-family: var(--main-font-family);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
+    overflow: hidden;
 }
 
 #btnLanding{
@@ -96,8 +97,8 @@
 #h1Landing{      
     background: black;
     opacity: 0.5;
-    color: white;
-    height: 100vh;
+    color: white !important;
+    height: 95vh;
     font-size: 54px;
     font-weight: bold;
 }
