--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -1,12 +1,23 @@
 @media only screen and (max-width: 600px) {
   /* For mobile phones: */
+  
+  #searchBar input[type=text]{
+    width: 65vw;
+  }
   #searchBar input[type=button]{ 
-    margin-bottom: -23px;
+    margin-bottom: -21px !important;
+  }
+  select{
+    width: 84vw !important;
+  }
+  .btnAddGame{
+    width: 80vw !important;
+    margin-top: -10px;
+    margin-bottom: 30px;
   }
   #games-container{
     grid-template-columns: 100%;
-    margin-left: 10%;
-   
+    margin-left: 10%;   
 }
 }
 
@@ -161,6 +172,7 @@
 
 .btnAddGame{
   color:var(--main-bg-color);
+  display:inline-block !important;
   font-weight:bold;
   font-size:18px;
   position:relative;
