--- a/client/src/components/Loading.css
+++ b/client/src/components/Loading.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 600px) {
   /* For mobile phones: */
   .loader {
-    left:30%;
+    left:31% !important;
     top:40%;
   }
   
