--- a/client/src/components/AddGameMenu.css
+++ b/client/src/components/AddGameMenu.css
@@ -9,7 +9,7 @@
   padding-top: 120px;
 }
 
-.pageTitle{
+#addGameMenuContainer .pageTitle{
   width: 90% !important;
   margin-left: -135px !important;
 }
