--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -41,13 +41,16 @@
     background-image: url('../img/landing.jpg');
     margin-top: -37px;
     width: 100%;
-    height: 105.8vh;
+    height: 100vh;
     font-family: var(--main-font-family);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 #btnLanding{
